fixed that overflow thing
can you believe this was only 4 lines
ill go fix other shit later

--- a/waffle-timing-league/src/scss/components/profilepage.scss
+++ b/waffle-timing-league/src/scss/components/profilepage.scss
@@ -204,6 +204,10 @@
 	&-title {
 		font-size: 1.5em;
 		font-weight: 600;
+		overflow: hidden;
+  		text-overflow: ellipsis;
+ 		white-space: nowrap;
+ 		width: 100%;
 	}
 
 	&-subtitle {
